--- a/assemblyendgame/package.json
+++ b/assemblyendgame/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scrim-s06j0bi",
-  "description": "https://scrimba.com/frontend-path-c0j/~03f2/s0vbf3kb21/head",
+  "name": "Scrim-s06j55b",
+  "description": "https://scrimba.com/frontend-path-c0j/~0xfg",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "19.0.0-rc-a99d8e8d-20240916",
     "react-dom": "19.0.0-rc-a99d8e8d-20240916",
+    "clsx": "2.1.1",
     "vite": "latest"
   },
   "devDependencies": {
